objects/vlocity_cmt__Premises__c.object
<CustomObject>
    <description>A complex, building or house, together with its land and outbuildings, occupied by businesses or tenants. In the communications and media industry, it may be a location where services such as wired phone or cable TV services are provided to customers. A premises record may optionally represent a location within a premises, such as a particular building on a property, a floor of a building, or some other subset of the larger premises where equipment may be deployed.</description>
    <fields>
        <fullName>vlocity_cmt__ActivationDate__c</fullName>
        <description>Date of Premises activation</description>
        <inlineHelpText>Date of Premises activation</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Address1__c</fullName>
        <description>Additional premises address information - 1.</description>
        <label>Street Supplement 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Address2__c</fullName>
        <description>Additional premises address information - 2.</description>
        <label>Street Supplement 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternateCity__c</fullName>
        <label>Alternate City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternateCountry__c</fullName>
        <label>Alternate Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternatePostalCode__c</fullName>
        <label>Alternate Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternateState__c</fullName>
        <label>Alternate State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternateStreetAddress__c</fullName>
        <label>Alternate Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoNumber__c</fullName>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DistributionArea__c</fullName>
        <description>The name of the Distribution Region that the Premises is located in (or Distribution Company that is responsible for supplying a commodity to the Premises)</description>
        <label>Distribution Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Armagh</fullName>
                </value>
                <value>
                    <fullName>Chichester</fullName>
                </value>
                <value>
                    <fullName>Derby</fullName>
                </value>
                <value>
                    <fullName>Salisbury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Floor__c</fullName>
        <description>The floor in a building where Premises is located.</description>
        <label>Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HouseNumberSupplement__c</fullName>
        <description>House number supplement of given Premises.</description>
        <label>House Number Supplement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsKeyAtPremises__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a key is available at the premises to access the meter.</description>
        <label>Key at Premises</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOkToEnter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a field service rep has permission to enter the premise for meter read or other field activities.</description>
        <label>Ok to Enter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsSupplyGuaranteed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Supply cannot be turned off for the premises.</description>
        <label>Supply Guaranteed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Jurisdiction__c</fullName>
        <description>Jurisdiction in which the Premises exists.</description>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jurisdiction A</fullName>
                </value>
                <value>
                    <fullName>Jurisdiction B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MeterReadInstructions__c</fullName>
        <description>Provides additional meter read instructions required to access difficult meters.</description>
        <label>Meter Read Instructions</label>
        <length>32786</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MeterReadWarning__c</fullName>
        <description>Provides warnings to the meter reader.</description>
        <label>Meter Read Warning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfOccupants__c</fullName>
        <description>Number of occupants located at the premises.</description>
        <label>Number of Occupants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentPremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Child Premises</relationshipLabel>
        <relationshipName>Premises</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesIdentifier__c</fullName>
        <description>Defined as &apos;external id&quot; so ID to be used especially for integration to outside systems.</description>
        <externalId>true</externalId>
        <label>Premises Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesNumber__c</fullName>
        <description>Potentially an external id</description>
        <label>Premises Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesType__c</fullName>
        <label>Premises Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>Commercial Building</fullName>
                </value>
                <value>
                    <fullName>Floor</fullName>
                </value>
                <value>
                    <fullName>Floor Section</fullName>
                </value>
                <value>
                    <fullName>Apartment Building</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PropertyOwnerAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the customer account that is considered the titled owner of this premises. Used in energy and utilities implementations to identify who should be charged for services after one tenant leaves and before a new tenant moves in.</description>
        <label>Property Owner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Premises</relationshipLabel>
        <relationshipName>Premises</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connected</fullName>
                    <default>true</default>
                    <label>Connected</label>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>Install in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StreetAddress__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SupplyGuaranteeReason__c</fullName>
        <description>Supply cannot be turned off for the premises - reason</description>
        <label>Supply Guarantee Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical Device</fullName>
                </value>
                <value>
                    <fullName>Contractual Agreement</fullName>
                </value>
                <value>
                    <fullName>National Security</fullName>
                </value>
                <value>
                    <fullName>Public Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimeZone__c</fullName>
        <description>Timezone of this premises.</description>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_cmt__VlocityTimeZones</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrendArea__c</fullName>
        <description>Premises location classification</description>
        <label>Trend Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UnitNumber__c</fullName>
        <description>Unit / Apartment number of this Premises.</description>
        <label>Unit / Apartment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Premises</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>